--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,18 +32,26 @@
         <td th:text="${job.jobName}">Job Name</td>
         <td th:text="${job.companyName}">Company</td>
         <td th:text="${#temporals.format(job.dateSubmitted, 'dd-MM-yyyy HH:mm')}">Date</td>
+        <td>
+            <a th:if="${job.cvFileName != null}"
+               th:href="@{'/uploads/' + ${job.cvFileName}}"
+               target="_blank">View CV</a>
+        </td>
     </tr>
     </tbody>
 </table>
 
 <!-- Add Job Form -->
 <h2>Add a New Job</h2>
-<form th:action="@{/jobs}" method="post">
+<form th:action="@{/jobs}" method="post" enctype="multipart/form-data">
     <label for="jobName">Job Name:</label><br>
     <input type="text" id="jobName" name="jobName" required><br>
 
     <label for="companyName">Company:</label><br>
     <input type="text" id="companyName" name="companyName" required><br>
+
+    <label for="cvFile">Upload CV:</label><br>
+    <input type="file" id="cvFile" name="cvFile" required><br>
 
     <button type="submit">Add Job</button>
 </form>
