checking if github actions work

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
     <script th:src="@{/js/upload.js}"></script>
 </head>
 <body>
+
+<h1>WORKING WITH AZURE</h1>
+
 <div class="container">
     <div class="header">
         <h1>Job Applications Tracker</h1>
