--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 
 <h1>WORKING WITH AZURE</h1>
 <h2>Publish profile</h2>
-<h3>made one more change</h3>
+<h3>made one more change</h3>af
 
 <div class="container">
     <div class="header">
