Made one more change to verify everything

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 <h1>WORKING WITH AZURE</h1>
 <h2>Publish profile</h2>
 <h3>made one more change</h3>af
+<h4>akgnldakg;nk;</h4>
 
 <div class="container">
     <div class="header">
