Fixed country name and company name being combined

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
 
                 <div class="field">
                     <label for="countryName">Country</label>
-                    <input type="text" id="countryName" name="companyName" required placeholder="e.g. United Kingdom">
+                    <input type="text" id="countryName" name="countryName" required placeholder="e.g. United Kingdom">
                 </div>
 
                 <div class="field">
