--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,9 +40,10 @@
                     <th>Company</th>
                     <th>Country</th>
                     <th>Applied</th>
+                    <th>Submitted</th>
                     <th>Status</th>
-                    <th>Resume</th>
-                    <th>Actions</th>
+                    <th>View CV</th>
+                    <th>Delete</th>
                 </tr>
                 </thead>
                 <tbody>
